# Redust

./: .gitattributes  .gitignore  CONTRIBUTING.md  PLAN.md  README.md  TESTING.md  docker-compose.test.yml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.redis.ts  vitest.config.ts
.github/workflows/: build.yml  test.yml
.sisyphus/: ralph-loop.local.md
.sisyphus/drafts/: redis-gui-client.md
coverage/: coverage-final.json  index.html
coverage/components/: CommandPalette.tsx.html  ConnectionManager.tsx.html  SplitPane.tsx.html  ThemeToggle.tsx.html  index.html
coverage/hooks/: index.html  useDebounce.ts.html  useEfficientUpdates.ts.html
coverage/lib/: api.ts.html  index.html
coverage/stores/: commandPaletteStore.ts.html  connectionStore.ts.html  index.html  index.ts.html  keyStore.ts.html  splitPaneStore.ts.html  themeStore.ts.html
docs/: GITHUB_ACTIONS.md  INTEGRATION_TESTS.md
e2e/: app.spec.ts
scripts/: test-integration.sh  test-rust-integration.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  redis_client.rs
src-tauri/src/commands/: cluster.rs  connection.rs  hash.rs  import_export.rs  keys.rs  list.rs  llm.rs  monitor.rs  pubsub.rs  script.rs  search.rs  set.rs  streams.rs  string.rs  timeseries.rs  vector.rs  zset.rs
src-tauri/tests/: Cargo.toml  bin.rs  integration_test.rs  main.rs  redis_basic_test.rs  redis_tests.rs  simple_redis_test.rs
src/components/: ClusterTopology.tsx  ClusterVisualization.tsx  CommandPalette.tsx  ConnectionList.tsx  ConnectionManager.tsx  Console.tsx  EmbeddingCache.tsx  ImportExport.tsx  JSONAnalyzer.tsx  KeyBrowser.tsx  LLMConversation.tsx  LuaScriptEditor.tsx  MonitoringDashboard.tsx  PubSubMonitor.tsx  QueryOptimizer.tsx  SplitPane.tsx  ThemeToggle.tsx  ValueEditor.tsx  VectorSearch.tsx  VectorVisualization.tsx  VirtualList.tsx  index.ts
src/hooks/: useDebounce.ts  useEfficientUpdates.ts
src/lib/: api.ts
src/stores/: commandPaletteStore.ts  connectionStore.ts  index.ts  keyStore.ts  splitPaneStore.ts  themeStore.ts
src/test/: AIComponents.test.tsx  (+12 more)
(+19 files in other folders)
