[package]
name = "redust"
version = "0.1.0"
description = "Next-Gen Redis GUI Client"
authors = ["Inoki"]
license = "AGPL-3.0"
repository = "https://github.com/Inokinoki/Redust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "aio", "cluster"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
async-stream = "0.3"
futures = "0.3"

[dev-dependencies]
cargo-watch = "8.5"
serde_json = "1.0"
