[package]
name = "redis-integration-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redis-integration-tests"
path = "main.rs"

[dependencies]
redis = { version = "0.24", default-features = false, features = ["tokio-comp", "aio"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
